Fix footer alignment

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -104,7 +104,7 @@ ul#menu li a:hover {
 
 .disclaimer {
     border-top: 1px solid whitesmoke;
-    padding: 2em;
+    /*padding-top: 1em;*/
     margin-top: 2em;
 }
 
